# AudioRecorder

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/junt/audiorecorder/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
recorder/: build.gradle
recorder/src/main/: AndroidManifest.xml
recorder/src/main/cpp/: CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  Mp3Encoder.cpp  Mp3Encoder.h  macro.h  native-lib.cpp
recorder/src/main/java/com/junt/recorder/: AudioRecorderManager.java
recorder/src/main/java/com/junt/recorder/core/: AudioRecorder.java  OnRecordListener.java  PcmConvert.java
recorder/src/main/java/com/junt/recorder/utils/: ByteUtils.java  Complex.java  FFT.java  FftFactory.java  Mp3Converter.java
recorder/src/main/java/com/junt/recorder/view/: AudioView.java  LineProgressBar.java  RecordActivity.java
recorder/src/main/res/drawable/: shape_btn_record.xml
recorder/src/main/res/layout/: activity_record.xml
recorder/src/main/res/values/: styles.xml
